--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,6 @@
-RewriteEngine On
-RewriteCond %{Request_Filename} !-F
-RewriteCond %{Request_Filename} !-d
-RewriteRule ^ index.php [QSA,L]
+RewriteEngine On 
+RewriteCond %{REQUEST_FILENAME} !-f 
+RewriteRule ^(.*)$ %{ENV:BASE}index.php [QSA,L]
 
 # Cross domain access
 Header add Access-Control-Allow-Origin "*"
